--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,10 @@
   color: #E57C23;
 }
 
+.active{
+  color: #E57C23;
+  font-weight: bold!important;
+}
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
